--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,10 @@
     <string name="LoginPage_UserName">User: </string>
     <string name="LoginPage_IncorrectLoginDetails">Username/Password do not match</string>
     <string name="LoginPage_CorrectLoginDetails">Logging in...</string>
+    <string name="title_activity_menu_order">MenuOrder</string>
+    <string name="action_settings">Settings</string>
+    <string name="section_format">Hello World from section: %1$d</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
